--- a/client/src/App.css
+++ b/client/src/App.css
@@ -339,7 +339,7 @@ footer h4 {
 .clearBtn:disabled {
     opacity: 0.5;
     cursor: not-allowed;
-    border-color: #555;
+    border-color: #696868;
     color: #777;
 }
 
@@ -350,7 +350,7 @@ footer h4 {
 
 .outputBox {
     flex: 1;
-    background: #181a21;
+    background: #161a28;
     border: 1px solid #333;
     border-radius: 4px;
     padding: 10px;
@@ -632,22 +632,30 @@ footer h4 {
     .editorWrap {
         display: flex;
         flex-direction: column;
-        grid-template-columns: none;
-        grid-template-rows: none;
-        flex: 1;
-        overflow: hidden;
+        width: 100%;
+        height: 100vh; /* Ensure full viewport height */
     }
 
-    .editorWrap > div:first-child { 
-        height: 60% !important; 
-        flex: none;
+    .editorContainer {
+        width: 100% !important;
+        height: 60% !important;
+        flex: none !important; /* Disable flex-grow/shrink */
+    }
+
+    .resizer {
+        display: none !important;
+    }
+
+    .outputContainer {
+        width: 100% !important;
+        height: 40% !important;
+        flex: none !important;
+        border-top: 1px solid #333;
     }
 
     .outputParams {
         border-left: none;
-        border-top: 1px solid #1b1a1a;
-        height: 40% !important;
-        flex: none;
+        height: 100%;
         width: 100%;
     }
 }
