--- a/client/src/App.css
+++ b/client/src/App.css
@@ -501,6 +501,9 @@ footer h4 {
     text-align: center;
     font-size: 14px;
     color: #aaa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Consolidated Media Query for Mobile */
